Shivansh | Stage | fixed cmd+k modal visibility issue in manage groups and accounts page

--- a/apps/web-giddh/src/assets/css/style-2.scss
+++ b/apps/web-giddh/src/assets/css/style-2.scss
@@ -6176,6 +6176,11 @@ button.btn.btn-filter {
         z-index: 9999 !important;
     }
 }
+.modal-open.cmd-k {
+    .modal-backdrop + .modal {
+        z-index: 999999 !important;
+    }
+}
 .modal-backdrop + .modal.fade .modal-dialog {
     transform: translate(0);
 }
